////////////////////////////////////////
// CHANGELOG 2.2.5-2.2.6 ///////////////
////////////////////////////////////////

****************************************
* Neue Funktionen / Änderungen *********
****************************************
PDF-Ansicht
- Block-Elemente (DIV, TABLE, TR, TH, TD) können mittels CSS-Eigenschaft 'display:none' ausgeblendet werden.

Modul: Inseratemarkt
- Administratoren können alle Inserate im Frontend verwalten.

****************************************
* Behobene Fehler **********************
****************************************
Aliasverwaltung
- Es können nun Aliase für Inhaltsseiten mit dem Schlüsselwort "require" definiert werden.

Navigation
- Wenn der übergeordnete Navigationspunkt unsichtbar ist, wird die Navigation nun korrekt dargestellt.

Dateiupload
- Jede Statusmeldung wird pro Datei nur einmal ausgegeben.

Media Manager
- Optimierter Dateiupload im Media Manager.
- Medienarchive 2, 3 und 4 funktionieren im Frontend nun auch bei aktivierter Shop-Navigation.

News Manager
- Die Ausgabe des Teaser Texts einer News Meldung erfolgt korrekt. Erfasste Zeilenumbrüche, wie auch hinterlegter HTML-Code wird entsprechend ausgegeben.

Kontakte Manager
- Die Benachrichtigung wird nun korrekt an die Empfängeradressen der Auswahlliste versendet.
- E-Mail und Web-Adressen dürfen nun Umlaute enthalten.

Modul: Medienverzeichnis
- Der Dateiupload funktioniert nun auch im Frontend.
- Der Dateiupload im Frontend und Backend erlaubt nun auch das Heraufladen von Dateien mit grossgeschriebener Dateiendung.
- Tritt ein Fehler während der Aktualisierung eines Eintrages auf, gehen die Daten nicht verloren.
- Anführungszeichen werden bei der Eingabe als Fliesstext korrekt behandelt.
- E-Mail und Web-Adressen dürfen nun Umlaute enthalten.

Modul: Shop
- Die Versandart wird im Frontend korrekt gesetzt, wenn nur eine definiert ist.

Modul: Kalender